# gefifi

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  README.md  ai_agent_capabilities_tracker.md  bun.lockb  canister_ids.json  cloudbuild.yaml  dfx.json  firebase.json  firestore.indexes.json  firestore.rules  package.json  project-structure.md  svelte.config.js  user_roles_actions_analysis.md  vite.config.ts
.cursor/rules/: app-specification.mdc  english.mdc
agents/: .dockerignore  Dockerfile  Dockerfile.railway  README.md  pyproject.toml
agents/build_assist_agent/: agent.py  auth_types.py  config.py  tool_types.py  tools.py
agents/build_assist_agent/sub_agents/: customer_agent.py  expert_agent.py  supplier_agent.py
agents/build_assist_agent/tools/: browse_requests.py  chat.py  contract.py  expert_request.py  express_interest.py  find_professionals.py  material_request.py  quote.py
backend/: bun.lockb  package.json
backend/data/: chats.json  messages.json  users.json  workRequests.json
backend/src/: auth.ts  data.ts  file-storage.ts  interfaces.ts  routes.ts  server.ts
backend/src/routes/: attachments.ts  auth.ts  chat.ts  contracts-management.ts  contracts-signing.ts  contracts.ts  index.ts  material-requests.ts  projects.ts  quotes.ts  user-interactions.ts  (+2 more)
functions/: .eslintrc.js  eslint.config.js  package-lock.json  package.json
functions/lib/: index.js  index.js.map  index.test.js  index.test.js.map  test.js  test.js.map
functions/src/: index.ts
public/: cors.json
scripts/: firebase-emulator-start.sh  run-agents.sh  run-backend.sh
(+126 files in other folders)
