[tool.poetry]
package-mode = false

[project]
name = "build-assist-agent"
version = "0.1.0"
description = "Construction AI Agent"
authors = [
    {name = "Rahees",email = "ahdrahees.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "google-adk (>=1.15.1,<2.0.0)",
    "litellm (>=1.77.7,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "jwt (>=1.4.0,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
