[tool.poetry]
package-mode = false

[project]
name = "build-assist-agent"
version = "0.1.0"
description = "Construction AI Agent"
authors = [
    {name = "Rahees",email = "ahdrahees.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "google-adk (>=1.16.0,<2.0.0)",
    "litellm (>=1.78.2,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
     "asyncpg (>=0.30.0,<1.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
